Locations persistence and anvil skills