@@ -1,8 +1,18 @@
 package com.gamersafer.minecraft.ablockalypse.location;
 
+import com.gamersafer.minecraft.ablockalypse.AblockalypsePlugin;
 import com.gamersafer.minecraft.ablockalypse.Character;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import org.bukkit.Location;
 
+import java.io.IOException;
+import java.io.Reader;
+import java.io.Writer;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.EnumMap;
 import java.util.List;
@@ -11,15 +21,53 @@ import java.util.Optional;
 
 public class LocationManager {
 
+    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
+
     private final Map<Character, Location> cinematicLocations;
     private final List<Location> spawnPoints;
     private Location hospital;
+
+    private int lastSpawnPointIndex;
 
     public LocationManager() {
         cinematicLocations = new EnumMap<>(Character.class);
         hospital = null;
         spawnPoints = new ArrayList<>();
-        // todo load persisted locations
+        lastSpawnPointIndex = -1;
+
+        // try to load locations form json
+        loadLocations();
+    }
+
+    private void loadLocations() {
+        try (Reader reader = Files.newBufferedReader(Paths.get(AblockalypsePlugin.getInstance().getDataFolder() + "/locations.json"))) {
+
+            LocationStorageJson data = GSON.fromJson(reader, LocationStorageJson.class);
+
+            if (data != null) {
+                cinematicLocations.putAll(data.cinematicLocations());
+                hospital = data.hospital();
+                spawnPoints.addAll(data.spawnPoints());
+            }
+        } catch (NoSuchFileException ignore) {
+            // it will be created on shutdown
+        } catch (IOException e) {
+            throw new RuntimeException("Unable to load the locations from the json file", e);
+        }
+    }
+
+    private void saveLocations() {
+        // NOTE: on java 17+, we need to: --add-opens java.base/java.lang.ref=ALL-UNNAMED
+        try (Writer writer = Files.newBufferedWriter(Paths.get(AblockalypsePlugin.getInstance().getDataFolder() + "/locations.json"),
+                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+
+            LocationStorageJson data = new LocationStorageJson(cinematicLocations, spawnPoints, hospital);
+
+            GSON.toJson(data, writer);
+
+        } catch (IOException e) {
+            throw new RuntimeException("Unable to save the locations from the json file", e);
+        }
     }
 
     public Optional<Location> getHospital() {
@@ -42,6 +90,15 @@ public class LocationManager {
         return spawnPoints;
     }
 
+    /**
+     * There can be n spawn points, and we cycle through them to avoid spawning players close to each other.
+     *
+     * @return the next spawn point or an empty optional if there isn't any spawn point set
+     */
+    public Optional<Location> getNextSpawnPoint() {
+        return Optional.ofNullable(spawnPoints.get(++lastSpawnPointIndex % spawnPoints.size()));
+    }
+
     public boolean addSpawnPoint(Location location) {
         return spawnPoints.add(location);
     }
@@ -51,7 +108,34 @@ public class LocationManager {
     }
 
     public void shutdown() {
-        // todo persist locations
+        // save the locations to json
+        saveLocations();
+    }
+
+    @SuppressWarnings({"FieldMayBeFinal"}) // we can't use a record since gson doesn't support them
+    private static final class LocationStorageJson {
+        private Map<Character, Location> cinematicLocations;
+        private List<Location> spawnPoints;
+        private Location hospital;
+
+        private LocationStorageJson(Map<Character, Location> cinematicLocations, List<Location> spawnPoints,
+                                    Location hospital) {
+            this.cinematicLocations = cinematicLocations;
+            this.spawnPoints = spawnPoints;
+            this.hospital = hospital;
+        }
+
+        public Map<Character, Location> cinematicLocations() {
+            return cinematicLocations;
+        }
+
+        public List<Location> spawnPoints() {
+            return spawnPoints;
+        }
+
+        public Location hospital() {
+            return hospital;
+        }
     }
 
 }
